name:                learnyouahaskell
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Dan Brooks
maintainer:          dmbrooks@live.co.uk
build-type:          Simple
cabal-version:       >=1.10

executable lyahfgg
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9, containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O3

test-suite test
  type:             exitcode-stdio-1.0
  main-Is:          test.hs
  hs-source-dirs:   src, test
  build-depends:    base >= 4.2 && < 5,
                    tasty >= 0.11 && < 0.12,
                    tasty-hunit >= 0.9 && < 0.10
  ghc-options:      -rtsopts -Wall -fno-warn-unused-do-bind -threaded
  default-language: Haskell2010